# extendrSVGdevice

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.Rmd  README.md
R/: extendr-wrappers.R
man/: extendr_svg.Rd
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
